fix seek bar on mobile

--- a/app/styles/player.scss
+++ b/app/styles/player.scss
@@ -107,7 +107,9 @@ div.radio-bar a:hover {
     cursor: pointer;
   }
   .seek-bar-wrapper {
-    width: 98%;
+    flex-grow: 1;
+    padding-left: 5px;
+    padding-right: 17px;
     &.seeking {
       input[type=range] {
         border: none;
